fixed blog-page-card issues on mobile

--- a/sass/layouts/_blog-cards.scss
+++ b/sass/layouts/_blog-cards.scss
@@ -41,12 +41,17 @@
 
       @media (max-width: 767px) {
         font-size: 24px;
+        text-align: center;
       }
     }
 
     span {
       display: block;
       line-height: 1.4;
+
+      @media (max-width: 767px) {
+        text-align: center;
+      }
     }
   }
 
@@ -55,6 +60,8 @@
 
     @media (max-width: 767px) {
       gap: 20px;
+      justify-content: center;
+      align-items: center;
     }
   }
 
@@ -63,6 +70,10 @@
 
     @media (max-width: 767px) {
       flex: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
     h2 {
@@ -74,20 +85,28 @@
 
       @media (max-width: 767px) {
         font-size: 16px;
+        text-align: center;
       }
     }
 
     &-img {
-      width: 100%;
       height: 148px;
       max-width: 251px;
       margin-bottom: 24px;
       border-radius: 24px;
       background-color: var(--color-8);
+
+      @media (max-width: 767px) {
+        max-width: unset;
+      }
     }
 
     span {
       line-height: 1.4;
+
+      @media (max-width: 767px) {
+        text-align: center;
+      }
     }
   }
 }
