--- a/sass/layouts/_previous.scss
+++ b/sass/layouts/_previous.scss
@@ -135,15 +135,17 @@
     max-width: 360px;
     gap: 8px;
     
+    @media (max-width: 1024px) {
+      justify-content: center;
+      align-items: center;
+    }
+
     @media (max-width: 767px) {
       justify-content: center;
     }
-  
-    .flex {
-      gap: 8px;
-    }
-  }
 
+  }
+  
   &__tag {
     white-space: nowrap;
     font-size: 14px;
@@ -153,6 +155,14 @@
     padding: 12px 24px;
     line-height: 1.7;
     border-radius: 100px;
+    
+    &:nth-child(3){
+      max-width: 77px;
+    }
+  
+    &:nth-child(4){
+      max-width: 274px;
+    }
   }
 
   &__content {
