--- a/sass/layouts/_sidebar.scss
+++ b/sass/layouts/_sidebar.scss
@@ -55,7 +55,6 @@
       padding: 8px 16px;
       border: 1px solid var(--color-3);
       border-radius: 100px;
-      flex: 0  1 20%;
       white-space: nowrap;
 
       &:nth-child(3){
